cabal-version:       2.4
name:                linguist-sample
version:             0.1.1.0
synopsis:            Example of a Cabal configuration file for GitHub Linguist
homepage:            https://github.com/github/linguist

-- A longer description of the package.
-- description:

license:             ISC
license-file:        LICENSE
author:              Alhadis
maintainer:          foo@bar.com
category:            Language
extra-source-files:  CHANGELOG.md

library
	build-depends:       base ^>=4.11.1.0
	hs-source-dirs:      src
	default-language:    Haskell2010

executable linguist-sample
	main-is:             Main.hs
	build-depends:       base ^>=4.11.1.0
	hs-source-dirs:      src
	default-language:    Haskell2010
